# augmented-reality-with-3d-rendering-using-metal-shaders-and-opencv

./: .gitignore  ARWebcam.cpp  CMakeLists.txt  MetalAdder.cpp  MetalAdder.hpp  MetalEngine.cpp  MetalEngine.hpp  TextureArray.hpp  add.metal  add.metallib  compile-metal-lib.sh  compile_command.json  main.cpp  mesh.cpp  mesh.hpp  model.metal  model.metallib  readme.md
assets/: tutorial.mtl
src/: ARWebcam.cpp  ARWebcam.hpp  CMakeLists.txt  MetalEngine.hpp  TextureArray.hpp  model.metal
src/render/: MetalEngine.cpp  MetalEngine.hpp  TextureArray.cpp  TextureArray.hpp  VertexData.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model.metal
